@@ -32,6 +32,7 @@ kotlin {
             implementation(libs.voyager.bottomSheetNavigator)
             implementation(libs.compose.material)
             implementation(compose.components.resources)
+
         }
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
@@ -40,10 +41,20 @@ kotlin {
             implementation(libs.exposed.core)
             implementation(libs.exposed.dao)
             implementation(libs.exposed.jdbc)
+            implementation("com.itextpdf:itextpdf:5.5.13.3")
+            implementation ("com.google.zxing:core:3.4.1")
+            implementation ("com.google.zxing:javase:3.4.1")
+            implementation(compose.desktop.currentOs)
+            implementation(libs.junit.junit)
+            implementation(libs.junit.jupiter)
+            implementation(kotlin("test"))
+            implementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
+            implementation("org.junit.jupiter:junit-jupiter-engine:5.10.2")
+            implementation("io.mockk:mockk:1.13.10") // versión estable para JVM
+            implementation("org.slf4j:slf4j-simple:2.0.9")
         }
     }
 }
-
 
 compose.desktop {
     
@@ -56,5 +67,13 @@ compose.desktop {
             packageVersion = "1.0.0"
 
         }
+    }
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform() // Esto es necesario para usar JUnit 5
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    testLogging {
+        events("passed", "skipped", "failed")
     }
 }
